--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto de practicas para el TFG",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src\\index.js"
   },
   "keywords": [
     "Node",
@@ -15,6 +15,8 @@
   "author": "Erik Andres Felea Hogas",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20"
   }
 }
