--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
