--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Proyecto de practicas para el TFG",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src\\index.js"
+    "dev": "nodemon src\\index.js",
+    "webpack": "webpack --mode development"
   },
   "keywords": [
     "Node",
@@ -18,6 +19,7 @@
     "express": "^4.18.2",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "webpack": "^5.75.0"
   }
 }
