--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src\\index.js",
-    "webpack": "webpack --mode development"
+    "webpack": "webpack --mode development --watch"
   },
   "keywords": [
     "Node",
@@ -16,10 +16,19 @@
   "author": "Erik Andres Felea Hogas",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.20.12",
     "express": "^4.18.2",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20",
-    "webpack": "^5.75.0"
+    "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "babel-loader": "^9.1.2",
+    "babel-preset-env": "^1.7.0",
+    "vue": "^3.2.45",
+    "vue-loader": "^17.0.1",
+    "vue-template-compiler": "^2.7.14",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
