--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   "author": "Erik Andres Felea Hogas",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.20.12",
     "express": "^4.18.2",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "babel-loader": "^9.1.2",
     "babel-preset-env": "^1.7.0",
     "vue": "^3.2.45",
